# focal

./: Cargo.toml  LICENSE  README.md
crates/focal_core/: Cargo.toml
crates/focal_core/src/: error.rs  fs_utils.rs  lib.rs  markdown.rs  model.rs  ops.rs  scan.rs
crates/focal_core/tests/: disabled_sqlite.rs  fs.rs  graph.rs  source.rs  sqlite.rs
crates/focal_fs/: Cargo.toml
crates/focal_fs/src/: error.rs  fs_utils.rs  lib.rs  markdown.rs  model.rs  ops.rs  scan.rs
crates/focal_fs/tests/: graph.rs
crates/focal_sqlite/: Cargo.toml
crates/focal_sqlite/src/: lib.rs
crates/focal_sqlite/tests/: graph.rs
crates/focal_types/: Cargo.toml
crates/focal_types/src/: lib.rs
skills/align-spec/: SKILL.md
skills/align-spec/agents/: openai.yaml
skills/spec-priority/: SKILL.md
skills/spec-priority/agents/: openai.yaml
spec/: SPEC.md
