[package]
name = "focal-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "focal_sqlite"
path = "src/lib.rs"

[dependencies]
focal-types = { path = "../focal_types" }
rusqlite = "0.32"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
